compiler/tools/fpp-check/test/component_instance_def/passive_cpu.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_instance_def/passive_cpu.fpp: 5.33
instance c: C base id 0x100 cpu 0
                                ^
error: invalid component instance definition c: passive component may not have CPU affinity
